--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.7.5'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+    id "org.flywaydb.flyway" version "9.6.0"
     id 'java'
 }
 
@@ -16,10 +17,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok:1.18.24'
+    implementation 'org.flywaydb:flyway-core:9.5.1'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
+flyway {
+    url = 'jdbc:h2:~/test'
+    user = 'h2'
+    password = 'root'
+    locations = ['classpath:db/migration']
+}
 tasks.named('test') {
     useJUnitPlatform()
 }
